# acanban

./: .build.yml  .buildinfo  README.md  choices.html  conclusion.html  deploy.html  genindex.html  index.html  intro.html  mypy.ini  obj.html  objects.inv  pyproject.toml  result.html  search.html  searchindex.js  tox.ini
.builds/: lint.yml  print.yml  test.yml
.github/workflows/: docs.yml
_sources/: conclusion.rst.txt  index.rst.txt  intro.rst.txt  obj.rst.txt  result.rst.txt
_sources/appendix/: glossary.rst.txt
_sources/meth/: index.rst.txt  (+1 more)
academic/: database.html  index.html  use-case.html
acanban/: __init__.py  __main__.py
appendix/: acknowledgement.html  glossary.html  index.html
architecture/: index.html  mechanisms.html
collab/: database.html  index.html  use-case.html
conclusion/: index.html
design/: database.html  index.html
docs/: deploy-alternative.puml  deploy.puml  requirements.txt
meth/: arch.html  choices.html  index.html  process.html  ux.html
other/: index.html  use-case.html
req/: break-down.html  index.html  suppl-spec.html  use-case.html  users.html
requirements/: glossary.html  index.html  problem-statement.html  supplementary-specification.html  use-case-model.html
result/: index.html
solution/: database.html  distribution.html  index.html
stubs/: appdirs.pyi  bleach_allowlist.pyi  cid.pyi  humanize.pyi
tests/: conftest.py  test_auth.py  test_config.py  test_db_wrapper.py  test_project.py  test_route.py  test_static.py  test_task.py  test_user.py
webapp/: choices.html  deploy.html  index.html  suppl-spec.html
(+243 files in other folders)
